fix visibility solidity

--- a/static/styles.css
+++ b/static/styles.css
@@ -7,7 +7,7 @@ body {
 	width:100%;
 	height:100%;
 	margin:0;
-	background: linear-gradient(0deg,#1a1a1a 50%,black);
+	background: linear-gradient(0deg,#212121 50%,black);
 	font-family: "JetBrains Mono";
 }
 
@@ -60,4 +60,60 @@ body {
 	top: 50%;
 	transform: translateY(-50%);
 	font-size: 18px;
+}
+
+.main_input {
+	display:none;
+	position: relative;
+	height: 50px;
+	width: 80%;
+	margin: 20px auto;
+	background: linear-gradient(45deg, #f3d577, #bc4c4e);
+	border-radius: 4px;
+}
+
+
+.main_input h2 {
+	position: absolute;
+	text-align: right;
+	margin: 0;
+	width: 45%;
+	top: 50%;
+	transform: translateY(-50%);
+	font-size: 18px;
+}
+
+.main_input input {
+	color: black;
+	background: transparent;
+	border: none;
+	margin-left: 50%;
+	width: 50%;
+	height: 100%;
+	font-size: 18px;
+	font-family: "JetBrains Mono";
+}
+
+.main_input input::placeholder {
+  color: rgb(73, 73, 73);
+}
+
+
+input:focus{
+	outline: none;
+}
+
+@keyframes slideInFromLeft {
+  0% {
+	transform: translateX(-100%);
+  }
+  100% {
+	transform: translateX(0%);
+  }
+}
+
+img {
+	max-width: 500px;
+	margin:0;
+	animation: 1.5s ease slideInFromLeft;
 }
